2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* XibCodeBehind.cs: Don't regen codebehind while loading
	  projects.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* XibCodeBehind.cs: Force-update designer files after adding
	  one to the project.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* XibCodeBehind.cs:
	* MacBuildUtilities.cs:
	* MonoDevelop.MacDev.csproj: Move more sharable code from
	  MonoDevelop.IPhone to MonoDevelop.MacDev.

2010-06-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MacBuildUtilities.cs:
	* MonoDevelop.MacDev.csproj: Moved lots of re-usable code from
	  iphone build extension to new
	  MonoDevelop.MacDev.MacBuildUtilities class.

2010-06-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.MacDev.csproj: Flush.

2010-06-04  Michael Hutchinson  <mhutchinson@novell.com>

	* icons:
	* templates:
	* AssemblyInfo.cs:
	* icons/mono-develop.svg:
	* MonoDevelop.MacDev.Plist:
	* MonoDevelop.MacDev.csproj:
	* templates/MacPlist.xft.xml:
	* icons/xib-template-view.png:
	* MonoDevelop.MacDev.addin.xml:
	* icons/xib-template-empty.png:
	* icons/xib-template-window.png:
	* icons/xib-template-application.png:
	* MonoDevelop.MacDev.InterfaceBuilder:
	* MonoDevelop.MacDev.Plist/PlistReal.cs:
	* MonoDevelop.MacDev.Plist/PlistData.cs:
	* MonoDevelop.MacDev.Plist/PlistDate.cs:
	* MonoDevelop.MacDev.Plist/PlistArray.cs:
	* MonoDevelop.MacDev.Plist/PlistString.cs:
	* MonoDevelop.MacDev.Plist/PlistObject.cs:
	* icons/application-x-mono-develop-xib.svg:
	* MonoDevelop.MacDev.Plist/PlistBoolean.cs:
	* MonoDevelop.MacDev.Plist/PlistInteger.cs:
	* MonoDevelop.MacDev.Plist/PlistDocument.cs:
	* icons/application-x-mono-develop-xib-24.png:
	* icons/application-x-mono-develop-xib-32.png:
	* icons/application-x-mono-develop-xib-22.png:
	* MonoDevelop.MacDev.Plist/PlistDictionary.cs:
	* MonoDevelop.MacDev.Plist/PlistObjectBase.cs:
	* icons/application-x-mono-develop-xib-48.png: