@@ -1,5 +1,10 @@
 2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* MonoDevelop.MacDev.addin.xml: Allow editing xibs as xml on
+	  !mac.
+
+2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* XibCodeBehind.cs: Don't regen codebehind while loading
 	  projects.
 
